k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: grafana.ahmedmhcodelab.click
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.ahmedmhcodelab.click
    secretName: grafana-tls
  rules:
  - host: grafana.ahmedmhcodelab.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
