k8s/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: prometheus.ahmedmhcodelab.click
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.ahmedmhcodelab.click
    secretName: prometheus-tls
  rules:
  - host: prometheus.ahmedmhcodelab.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
